// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates source maps 1`] = `
"import _JSXStyle from 'styled-jsx/style';
export default (() => <div className={\\"jsx-2743241663\\"} data-jsx>
    <p className={\\"jsx-2743241663\\"} data-jsx>test</p>
    <p className={\\"jsx-2743241663\\"} data-jsx>woot</p>
    <_JSXStyle styleId={\\"188072295\\"} css={\\"p.jsx-2743241663{color:red}\\\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInNvdXJjZS1tYXBzLmpzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUlnQixBQUNjLFVBQUMiLCJmaWxlIjoic291cmNlLW1hcHMuanMiLCJzb3VyY2VzQ29udGVudCI6WyJleHBvcnQgZGVmYXVsdCAoKSA9PiAoXG4gIDxkaXY+XG4gICAgPHA+dGVzdDwvcD5cbiAgICA8cD53b290PC9wPlxuICAgIDxzdHlsZSBqc3g+eydwIHsgY29sb3I6IHJlZCB9J308L3N0eWxlPlxuICA8L2Rpdj5cbilcbiJdfQ== */\\\\n/*@ sourceURL=source-maps.js */\\"} />
  </div>);"
`;

exports[`ignores when attribute is absent 1`] = `
"const a = () => <div>
    <p>hi</p>
    <style>{'woot'}</style>
  </div>;"
`;

exports[`ignores whitespace around expression container 1`] = `
"import _JSXStyle from 'styled-jsx/style';
export default (() => <div className={\\"jsx-2743241663\\"} data-jsx>
    <p className={\\"jsx-2743241663\\"} data-jsx>test</p>
    <p className={\\"jsx-2743241663\\"} data-jsx>woot</p>
    <p className={\\"jsx-2743241663\\"} data-jsx>woot</p>
    <_JSXStyle styleId={\\"188072295\\"} css={\\"p.jsx-2743241663{color:red}\\"} />
  </div>);"
`;

exports[`mixed global and scoped 1`] = `
"import _JSXStyle from 'styled-jsx/style';
const Test = () => <_JSXStyle styleId={\\"188072295\\"} css={\\"p{color:red}\\"} />;

export default (() => <div className={\\"jsx-2673076688\\"} data-jsx>
    <p className={\\"jsx-2673076688\\"} data-jsx>test</p>
    <_JSXStyle styleId={\\"3149549172\\"} css={\\"body{background:red}\\"} />
    <_JSXStyle styleId={\\"188072295\\"} css={\\"p.jsx-2673076688{color:red}\\"} />
  </div>);"
`;

exports[`should have different jsx ids 1`] = `
"import _JSXStyle from 'styled-jsx/style';
const color = 'red';
const otherColor = 'green';

const A = () => <div className={\\"jsx-57381496\\"} data-jsx>
    <p className={\\"jsx-57381496\\"} data-jsx>test</p>
    <_JSXStyle styleId={\\"924167211\\"} css={\`p.jsx-57381496{color:\${color}}\`} />
  </div>;

const B = () => <div className={\\"jsx-3099245642\\"} data-jsx>
    <p className={\\"jsx-3099245642\\"} data-jsx>test</p>
    <_JSXStyle styleId={\\"45234319\\"} css={\`p.jsx-3099245642{color:\${otherColor}}\`} />
  </div>;

export default (() => <div>
    <A />
    <B />
  </div>);"
`;

exports[`should not add the data-jsx attribute to components instances 1`] = `
"import _JSXStyle from \\"styled-jsx/style\\";
const Test = () => <div className={\\"jsx-2529315885\\"} data-jsx>
    <span className={\\"jsx-2529315885\\"} data-jsx>test</span>
    <Component />
    <_JSXStyle styleId={\\"1535297024\\"} css={\\"span.jsx-2529315885{color:red}\\"} />
  </div>;"
`;

exports[`works with class 1`] = `
"import _JSXStyle from \\"styled-jsx/style\\";
export default class {

  render() {
    return <div className={\\"jsx-2101845350\\"} data-jsx>
        <p className={\\"jsx-2101845350\\"} data-jsx>test</p>
        <_JSXStyle styleId={\\"1891769468\\"} css={\\"p.jsx-2101845350{color:red}\\"} />
      </div>;
  }

}"
`;

exports[`works with expressions in template literals 1`] = `
"import _JSXStyle from 'styled-jsx/style';
const darken = c => c;
const color = 'red';
const otherColor = 'green';
const mediumScreen = '680px';
const animationDuration = '200ms';
const animationName = 'my-cool-animation';
const obj = { display: 'block' };

// eslint-disable-next-line no-unused-vars
export default (({ display }) => <div className={'jsx-3337162935 ' + _JSXStyle.dynamic([['3591146860', [display ? 'block' : 'none']]])} data-jsx>
    <p className={'jsx-3337162935 ' + _JSXStyle.dynamic([['3591146860', [display ? 'block' : 'none']]])} data-jsx>test</p>
    <_JSXStyle styleId={\\"3864570373\\"} css={\`p.\${color}.jsx-3337162935{color:\${otherColor};display:\${obj.display}}\`} />
    <_JSXStyle styleId={\\"188072295\\"} css={\\"p.jsx-3337162935{color:red}\\"} />
    <_JSXStyle styleId={\\"964903971\\"} css={\`body{background:\${color}}\`} />
    <_JSXStyle styleId={\\"964903971\\"} css={\`body{background:\${color}}\`} />
    <_JSXStyle styleId={\\"2993630608\\"} css={\`p.jsx-3337162935{color:\${color}}\`} />
    <_JSXStyle styleId={\\"2993630608\\"} css={\`p.jsx-3337162935{color:\${color}}\`} />
    <_JSXStyle styleId={\\"2683050534\\"} css={\`p.jsx-3337162935{color:\${darken(color)}}\`} />
    <_JSXStyle styleId={\\"1376588607\\"} css={\`p.jsx-3337162935{color:\${darken(color) + 2}}\`} />
    <_JSXStyle styleId={\\"3617592140\\"} css={\`@media (min-width:\${mediumScreen}){p.jsx-3337162935{color:green}p.jsx-3337162935{color:\${\`red\`}}}p.jsx-3337162935{color:red}\`} />
    <_JSXStyle styleId={\\"4197553757\\"} css={\`p.jsx-3337162935{-webkit-animation-duration:\${animationDuration};animation-duration:\${animationDuration}}\`} />
    <_JSXStyle styleId={\\"1545608137\\"} css={\`p.jsx-3337162935{-webkit-animation:\${animationDuration} forwards \${animationName};animation:\${animationDuration} forwards \${animationName}}div.jsx-3337162935{background:\${color}}\`} />

    <_JSXStyle styleId={\\"3591146860\\"} css={\`span.__jsx-style-dynamic-selector{display:\${display ? 'block' : 'none'}}\`} dynamic={[display ? 'block' : 'none']} />
  </div>);"
`;

exports[`works with external stylesheets (global only) 1`] = `
"import _JSXStyle from 'styled-jsx/style';
import styles from './styles';
const styles2 = require('./styles2');
import { foo as styles3 } from './styles';

export default (() => <div className={\\"jsx-2534288328\\"} data-jsx>
    <p className={\\"jsx-2534288328\\"} data-jsx>test</p>
    <p className={\\"jsx-2534288328\\"} data-jsx>woot</p>
    <_JSXStyle styleId={styles2.__hash} css={styles2} />
    <_JSXStyle styleId={styles3.__hash} css={styles3} />
    <div className={\\"jsx-2534288328\\"} data-jsx>woot</div>
    <_JSXStyle styleId={\\"1144769207\\"} css={\\"p.jsx-2534288328{color:red}div.jsx-2534288328{color:green}\\"} />
    <_JSXStyle styleId={styles.__hash} css={styles} />
  </div>);"
`;

exports[`works with external stylesheets (multi-line) 1`] = `
"import _JSXStyle from 'styled-jsx/style';
import styles from './styles';

export default (() => <div className={\`jsx-\${styles.__scopedHash}\`} data-jsx>
    <p className={\`jsx-\${styles.__scopedHash}\`} data-jsx>test</p>
    <_JSXStyle styleId={styles.__scopedHash} css={styles.__scoped} />
  </div>);"
`;

exports[`works with external stylesheets 1`] = `
"import _JSXStyle from 'styled-jsx/style';
import styles from './styles';
const styles2 = require('./styles2');
import { foo as styles3 } from './styles';

export default (() => <div className={'jsx-2534288328 ' + \`jsx-\${styles3.__scopedHash} jsx-\${styles.__scopedHash}\`} data-jsx>
    <p className={'jsx-2534288328 ' + \`jsx-\${styles3.__scopedHash} jsx-\${styles.__scopedHash}\`} data-jsx>test</p>
    <p className={'jsx-2534288328 ' + \`jsx-\${styles3.__scopedHash} jsx-\${styles.__scopedHash}\`} data-jsx>woot</p>
    <_JSXStyle styleId={styles2.__hash} css={styles2} />
    <_JSXStyle styleId={styles3.__scopedHash} css={styles3.__scoped} />
    <div className={'jsx-2534288328 ' + \`jsx-\${styles3.__scopedHash} jsx-\${styles.__scopedHash}\`} data-jsx>woot</div>
    <_JSXStyle styleId={\\"1144769207\\"} css={\\"p.jsx-2534288328{color:red}div.jsx-2534288328{color:green}\\"} />
    <_JSXStyle styleId={styles.__scopedHash} css={styles.__scoped} />
  </div>);"
`;

exports[`works with global styles 1`] = `
"import _JSXStyle from 'styled-jsx/style';
const Test = () => <div className={\\"jsx-2209073070\\"} data-jsx>
    <_JSXStyle styleId={\\"3477488769\\"} css={\\"body{color:red}:hover{color:red;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-animation:foo 1s ease-out;animation:foo 1s ease-out}div a{display:none}[data-test]>div{color:red}\\"} />
  </div>;

const Test2 = () => <_JSXStyle styleId={\\"188072295\\"} css={\\"p{color:red}\\"} />;"
`;

exports[`works with multiple jsx blocks 1`] = `
"import _JSXStyle from \\"styled-jsx/style\\";
const attrs = {
  id: 'test'
};

const Test1 = () => <div className={\\"jsx-2529315885\\"} data-jsx>
    <span {...attrs} data-test=\\"test\\" className={\\"jsx-2529315885\\" + \\" \\" + (attrs.className != null && attrs.className || \\"\\")} data-jsx>test</span>
    <Component />
    <_JSXStyle styleId={\\"1535297024\\"} css={\\"span.jsx-2529315885{color:red}\\"} />
  </div>;

const Test2 = () => <span>test</span>;

const Test3 = () => <div className={\\"jsx-2529315885\\"} data-jsx>
    <span className={\\"jsx-2529315885\\"} data-jsx>test</span>
    <_JSXStyle styleId={\\"1535297024\\"} css={\\"span.jsx-2529315885{color:red}\\"} />
  </div>;

export default class {
  render() {
    return <div className={\\"jsx-2101845350\\"} data-jsx>
        <p className={\\"jsx-2101845350\\"} data-jsx>test</p>
        <_JSXStyle styleId={\\"1891769468\\"} css={\\"p.jsx-2101845350{color:red}\\"} />
      </div>;
  }
}"
`;

exports[`works with non styled-jsx styles 1`] = `
"import _JSXStyle from 'styled-jsx/style';
export default (() => <div className={\\"jsx-2743241663\\"} data-jsx>
    <p className={\\"jsx-2743241663\\"} data-jsx>woot</p>
    <style dangerouslySetInnerHTML={{ __html: \`body { margin: 0; }\` }}></style>
    <_JSXStyle styleId={\\"188072295\\"} css={\\"p.jsx-2743241663{color:red}\\"} />
  </div>);"
`;

exports[`works with stateless 1`] = `
"import _JSXStyle from 'styled-jsx/style';
export default (() => <div className={\\"jsx-2743241663\\"} data-jsx>
    <p className={\\"jsx-2743241663\\"} data-jsx>test</p>
    <p className={\\"jsx-2743241663\\"} data-jsx>woot</p>
    <p className={\\"jsx-2743241663\\"} data-jsx>woot</p>
    <_JSXStyle styleId={\\"188072295\\"} css={\\"p.jsx-2743241663{color:red}\\"} />
  </div>);"
`;
